--- a/application/android/app/src/main/res/layout/fragment_sample_content.xml
+++ b/application/android/app/src/main/res/layout/fragment_sample_content.xml
@@ -8,10 +8,22 @@
     android:background="@color/background">
 
     <TextView
+        style="@style/Default.Text.Main"
+        android:id="@+id/fragment_sample_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="@dimen/dimenS"
+        app:layout_constraintTop_toBottomOf="@id/fragment_sample_failure_preview" />
+
+    <TextView
+        style="@style/Default.Text.Support"
         android:id="@+id/fragment_sample_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="@dimen/dimenS"
+        android:layout_marginHorizontal="@dimen/dimenM"
+        app:layout_constraintTop_toBottomOf="@id/fragment_sample_title" />
 
     <ImageView
         android:visibility="gone"
@@ -19,7 +31,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="fitCenter"
-        android:translationZ="1px"
         android:elevation="0dp"
         android:background="@color/background"
         app:layout_constraintDimensionRatio="1:1"
